# system76-firmware

./: Cargo.toml  Makefile  README.md  rebuild.sh  shell.nix  vendor_config
daemon/: Cargo.toml
daemon/src/: lib.rs  main.rs
data/: com.system76.firmwaredaemon.conf  system76-firmware-daemon.conf  system76-firmware-daemon.service
debian/: changelog  control  copyright  rules  system76-firmware-daemon.install  system76-firmware-daemon.service  system76-firmware.install
examples/: download.rs  firmware_id.rs  thelio_io.rs
src/: bios.rs  boot.rs  config.rs  download.rs  ec.rs  lib.rs  main.rs  me.rs  mount.rs  sideband.rs  thelio_io.rs  transition.rs  util.rs
