[package]
name = "system76-firmware"
version = "1.0.27"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2018"

[workspace]
members = [ "daemon" ]

[[bin]]
name = "system76-firmware-cli"
path = "src/bin/cli.rs"

[dependencies]
buildchain = "0.4"
clap = "2.33"
ecflash = { git = "https://github.com/system76/ecflash.git", branch = "stable" }
libc = "0.2"
plain = "0.2"
rust-lzma = "0.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
tar = "0.4"
tempdir = "0.3"
uuid = "0.8"
bincode = "1.3"
anyhow = "1.0"

[dependencies.system76_ectool]
version = "0.2.1"
features = ["std"]

[profile.release]
lto = true
