[package]
name = "system76-firmware"
version = "1.0.75"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2021"
rust-version = "1.80"

[workspace]
members = ["daemon"]

[[bin]]
name = "system76-firmware-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
buildchain = "0.5.3"
clap = { version = "3", features = ["derive"] }
ecflash = { git = "https://github.com/system76/ecflash.git", branch = "stable" }
libc = "0.2"
plain = "0.2"
rust-lzma = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.20"
uuid = "1.17"

[dependencies.system76_ectool]
version = "0.2.1"
features = ["std"]

[profile.release]
lto = true
