[package]
name = "system76-firmware-daemon"
version = "0.1.0"
authors = [
    "Jeremy Soller <jeremy@system76.com>",
    "Michael Aaron Murphy <michael@system76.com>",
]
edition = "2018"

[dependencies]
dbus = "0.8.2"
enum_derive = "0.1.7"
err-derive = "0.2.3"
libc = "0.2.68"
shrinkwraprs = "0.3.0"
system76-firmware = { path = "../" }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
