[package]
name = "system76-firmware-daemon"
version = "0.1.0"
authors = [
    "Jeremy Soller <jeremy@system76.com>",
    "Michael Aaron Murphy <michael@system76.com>",
]
edition = "2018"

[dependencies]
dbus = "0.9"
enum_derive = "0.1"
thiserror = "1.0"
libc = "0.2"
shrinkwraprs = "0.3"
system76-firmware = { path = "../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dbus-crossroads = "0.3.0"
